@startuml

interface Beverage {
    +cost(): double
    +description(): string
}

class Coffee {
    +cost(): double
    +description(): string
}

abstract class BeverageDecorator {
    -beverage_: Beverage
    +BeverageDecorator(beverage: Beverage)
    +cost(): double
    +description(): string
}

class Milk {
    +cost(): double
    +description(): string
}

class Sugar {
    +cost(): double
    +description(): string
}

Coffee ..|> Beverage
BeverageDecorator ..|> Beverage
Milk --|> BeverageDecorator
Sugar --|> BeverageDecorator
BeverageDecorator *-- Beverage : wraps

class Client {
    +createBeverage(): Beverage
}

Client --> Beverage : uses

@enduml
